added sttopping condition

--- a/MultipointSearch.ipynb
+++ b/MultipointSearch.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "importing Jupyter notebook from pertubativeHeuristics.ipynb\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sqlalchemy as db\n",
     "import pandas as pd\n",
@@ -37,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,22 +44,22 @@
     "sample_one_hidden = \"./itc2007_dataset/exam_comp_set9.exam\"#done\n",
     "sample_two_hidden = \"./itc2007_dataset/exam_comp_set12.exam\"#done\n",
     "\n",
-    "sample = sample_one_late"
+    "sample = sample_one_hidden"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "GENES = [1,2,3,4,5,6,7,8,9]\n",
-    "POPULATION_SIZE=20"
+    "POPULATION_SIZE=50"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,89 +74,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "period_room\n",
-      "exam_student\n",
-      "exam_period\n",
-      "student\n",
-      "room\n",
-      "period\n",
-      "exam\n",
-      "period ['1', ' EXAM_COINCIDENCE', ' 8\\n']\n",
-      "period ['2', ' EXAM_COINCIDENCE', ' 10\\n']\n",
-      "period ['13', ' EXAM_COINCIDENCE', ' 40\\n']\n",
-      "period ['34', ' EXAM_COINCIDENCE', ' 78\\n']\n",
-      "period ['35', ' EXAM_COINCIDENCE', ' 80\\n']\n",
-      "period ['82', ' EXAM_COINCIDENCE', ' 99\\n']\n",
-      "period ['100', ' EXAM_COINCIDENCE', ' 120\\n']\n",
-      "period ['111', ' EXAM_COINCIDENCE', ' 122\\n']\n",
-      "period ['121', ' EXAM_COINCIDENCE', ' 134\\n']\n",
-      "period ['126', ' EXAM_COINCIDENCE', ' 136\\n']\n",
-      "period ['140', ' EXAM_COINCIDENCE', ' 149\\n']\n",
-      "period ['150', ' EXAM_COINCIDENCE', ' 151\\n']\n",
-      "period ['152', ' EXAM_COINCIDENCE', ' 152\\n']\n",
-      "period ['154', ' EXAM_COINCIDENCE', ' 162\\n']\n",
-      "period ['163', ' EXAM_COINCIDENCE', ' 165\\n']\n",
-      "period ['166', ' EXAM_COINCIDENCE', ' 170\\n']\n",
-      "period ['173', ' EXAM_COINCIDENCE', ' 189\\n']\n",
-      "period ['179', ' EXAM_COINCIDENCE', ' 186\\n']\n",
-      "period ['190', ' EXAM_COINCIDENCE', ' 199\\n']\n",
-      "period ['151', ' AFTER', ' 3\\n']\n",
-      "period ['33', ' AFTER', ' 5\\n']\n",
-      "period ['123', ' EXCLUSION', ' 121\\n']\n",
-      "period ['166', ' EXCLUSION', ' 18\\n']\n",
-      "['TWOINAROW', '20']\n",
-      "['TWOINADAY', '5']\n",
-      "['PERIODSPREAD', '20']\n",
-      "['NONMIXEDDURATIONS', '25']\n",
-      "['FRONTLOAD', '25', '30', '15']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "softconstraints,constraints,examRows,periodRows,period_count = populateDB(engine,session,Base,connection,sample)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "amount of hard constraint violations 0\n",
-      "iteration: 2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "genInitialSolution(connection,session,constraints,examRows,periodRows,sample)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "125"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "currentScore = getCurrentScore(softconstraints,connection)\n",
     "currentScore"
@@ -172,24 +102,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/bin/bash: docker: command not found\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!docker exec examschedulingcopy_postgres_1 pg_dump -U postgres  postgres > ./dump.sql"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
